Added stats to the UserResponse
- generated docs as well
