# backend/docs/swagger.yaml
@@ -181,6 +181,10 @@ definitions:
     properties:
       bio:
         type: string
+      highestLeveledSkill:
+        type: string
+      mostRecentLeveledSkill:
+        type: string
       profile:
         $ref: '#/definitions/main.ProfileResponse'
     required:
